# nimboestratus_deployer

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
ejemplo_01/: click_predict_01.py  modelo.ipynb
fastapi/: modelo.ipynb
models/: adult_census_lr.pkl
