[tool.poetry]
name = "nimboestratus-deployer"
version = "0.1.0"
description = "Ejemplos de despliegue de modelos de ML en la nube"
authors = ["Francisco Palm"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "nimboestratus_deployer"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
jupyterlab = "^4.0.0"
transformers = "^4.29.2"
scikit-learn = "^1.2.2"
mkdocs = "^1.4.3"
click = "^8.1.3"
streamlit = "^1.22.0"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
